--- a/index.html
+++ b/index.html
@@ -104,15 +104,25 @@
         <div class="reviews__wrapper slider">
           <ul class="slider__items">
             <li class="reviews__item slider__item">
-              <h2 class="reviews__author">Николай Петров</h2>
+              <div class="reviews__author">
+                <h2>Николай Петров</h2>
+                <div class="reviews__author-data">25 лет, водитель трамвая</div>
+              </div>
               <p>«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
             </li>
             <li class="reviews__item slider__item">
-              <h2 class="reviews__author">Николай Петров</h2>
+              <div class="reviews__author">
+                <h2>Николай Петров</h2>
+                <div class="reviews__author-data">25 лет, водитель трамвая</div>
+              </div>
+              
               <p>«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
             </li>
             <li class="reviews__item slider__item">
-              <h2 class="reviews__author">Николай Петров</h2>
+              <div class="reviews__author">
+                <h2>Николай Петров</h2>
+                <div class="reviews__author-data">25 лет, водитель трамвая</div>
+              </div>
               <p>«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
             </li>
           </ul>
@@ -138,10 +148,10 @@
             </li>
           </ul>-->
           <table class="advantages__table">
-            <tr><th></th><th><div>база</div><div>1,99 usd</div></th><th><div>стандарт</div> <div>3,99 usd</div></th><th><div>анлим</div><div>9,99 usd</div></th></tr>
-            <tr><td>Розовый фильтр</td><td></td><td></td><td></td></tr>
-            <tr><td>Смайлики</td><td></td><td></td><td></td></tr>
-            <tr><td>Комментарии</td><td></td><td></td><td></td></tr>
+            <tr><th></th><th><div class="advantages__title">база</div><div>1,99 usd</div></th><th class="advantages__hit"><div class="advantages__title">стандарт</div><div>3,99 usd</div></th><th><div class="advantages__title">анлим</div><div>9,99 usd</div></th></tr>
+            <tr><td>Розовый фильтр</td><td class="advantages__yes"><div class="advantages__text">Розовый фильтр</div></td><td class="advantages__yes"><div class="advantages__text">Розовый фильтр</div></td><td class="advantages__yes"><div class="advantages__text">Розовый фильтр</div></td></tr>
+            <tr><td>Смайлики</td><td class="advantages__no"><div class="advantages__text">Смайлики</div></td><td class="advantages__yes"><div class="advantages__text">Смайлики</div></td><td class="advantages__yes"><div class="advantages__text">Смайлики</div></td></tr>
+            <tr><td>Комментарии</td><td class="advantages__no"><div class="advantages__text">Комментарии</div></td><td class="advantages__no"><div class="advantages__text">Комментарии</div></td><td class="advantages__yes"><div class="advantages__text">Комментарии</div></td></tr>
           </table>
 
           <ul class="slider__controls">
